--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
-    "@reactuses/core": "^5.0.21",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.8.0",
     "axios": "^1.7.7",
@@ -25,6 +24,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
